--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,30 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  color-scheme: dark;
+  color: CanvasText;
+  background-color: #0c1317;
+  scroll-behavior: smooth;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* Modern browsers with `scrollbar-*` support */
+@supports (scrollbar-width: auto) {
+  section {
+      scrollbar-color: rgb(255 255 255 / 10%) transparent;
+      scrollbar-width: thin;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+/* Legacy browsers with `::-webkit-scrollbar-*` support */
+@supports selector(::-webkit-scrollbar) {
+  section::-webkit-scrollbar-thumb {
+      background: rgb(255 255 255 / 10%);
+  }
+  section::-webkit-scrollbar-track {
+      background: transparent;
+  }
+  section::-webkit-scrollbar {
+      max-width: 6px;
+      max-height: 6px;
   }
 }
